# aura

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml  notes.md  task_plan.md
.claude-plugin/: marketplace.json
assets/: Info.plist
crates/aura/: Cargo.toml
crates/aura-claude-code-hook/: Cargo.toml
crates/aura-claude-code-hook/src/: main.rs
crates/aura-common/: Cargo.toml
crates/aura-common/src/: event.rs  ipc.rs  lib.rs  session.rs  time.rs  transcript.rs
crates/aura-common/src/adapters/: claude_code.rs  codex.rs  mod.rs
crates/aura-daemon/: Cargo.toml
crates/aura-daemon/assets/: AppIcon.icns  Info.plist
crates/aura-daemon/assets/fonts/: OFL.txt
crates/aura-daemon/src/: lib.rs  main.rs  registry.rs  server.rs  watcher.rs
crates/aura-daemon/src/parsers/: claude.rs  codex.rs  mod.rs
crates/aura-daemon/src/ui/: animation.rs  assets.rs  glass.rs  icons.rs  indicator.rs  mod.rs  session_list.rs  state.rs  status_bar.rs  theme.rs  visual_test_helpers.rs  visual_tests.rs  window.rs
crates/aura-daemon/tests/: codex_log_replay.rs
crates/aura-daemon/tests/fixtures/: codex-session-sample.jsonl
crates/aura-hook/: Cargo.toml
crates/aura-hook/src/: main.rs
crates/aura/src/: codex_client.rs  hook.rs  lib.rs  main.rs  registry.rs  server.rs
crates/aura/src/ui/: animation.rs  indicator.rs  mod.rs  session_list.rs  theme.rs  visual_tests.rs
docs/: design-spec.md  user-stories.md
docs/agents/: improvements.md  knowledge.md  patterns.md
plugins/aura/: README.md
plugins/aura/.claude-plugin/: plugin.json
plugins/aura/hooks/: hooks.json
plugins/aura/skills/session-naming/: SKILL.md
plugins/claude-code/.claude-plugin/: plugin.json
prototype/: index.html  package.json  serve.ts
prototype/public/: styles.css
prototype/src/: App.tsx  IconPreview.tsx  constants.ts  index.css  theme.ts  types.ts
prototype/src/components/: Controls.tsx  Indicator.tsx  SessionList.tsx  SessionRow.tsx
prototype/src/hooks/: useDrag.ts  useSessionManager.ts
scripts/: bundle-macos.sh
spec/: glossary.md
spec/decisions/: BDR-0001-session-naming-via-hook-parsing.md  BDR-0002-no-session-restoration-on-startup.md  BDR-0003-per-session-stale-timers.md
spec/features/cli/: cli.feature
spec/features/integration/: claude-code.feature  codex.feature
spec/features/session/: session-lifecycle.feature
spec/features/tracking/: tool-tracking.feature
spec/features/ui/: animation-system.feature  hud-indicator.feature  session-list.feature  theme-system.feature
src/: config.rs  ipc.rs  lib.rs  main.rs  registry.rs  server.rs  session.rs
src/agents/: claude_code.rs  codex.rs  mod.rs
src/agents/codex/: mod.rs  sessions.rs
src/agents/codex/sessions/: mod.rs  parser.rs  paths.rs
src/ui/: animation.rs  assets.rs  glass.rs  icons.rs  indicator.rs  mod.rs  session_list.rs  theme.rs
tests/: codex_rollout_integration_test.rs
