[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["fahchen"]

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process"] }

# Error handling
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# UI
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }

# Internal crates
aura-common = { path = "crates/aura-common" }
