[package]
name = "aura"
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["fahchen"]
description = "Aura HUD daemon"
default-run = "aura"

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "process", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# UI
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }

# Platform directories
dirs = "6"

# Atomic file writes
tempfile = "3"

# Text
unicode-width = "0.2"
chrono = "0.4"

# Filesystem watching (Codex session rollouts)
notify = "6"

[dev-dependencies]
filetime = "0.2"
