[package]
name = "aura-claude-code-hook"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Claude Code hook handler for Aura"

[[bin]]
name = "aura-claude-code-hook"
path = "src/main.rs"

[dependencies]
aura-common.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
