[package]
name = "aura-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Aura HUD daemon"

[[bin]]
name = "aura"
path = "src/main.rs"

[dependencies]
aura-common.workspace = true
clap.workspace = true
gpui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2"
