[package]
name = "aura"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Aura HUD daemon"
default-run = "aura"

[[bin]]
name = "aura"
path = "src/main.rs"

[[bin]]
name = "aura_visual_tests"
path = "src/visual_test_runner.rs"
required-features = ["visual-tests"]

[features]
default = []
visual-tests = ["anyhow", "image"]

[dependencies]
aura-common.workspace = true
clap.workspace = true
gpui.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width = "0.2"
chrono = "0.4"

# Optional dependencies for visual tests binary
anyhow = { version = "1.0", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
anyhow = "1.0"
image = "0.25"
